--- a/ooxx/index.html
+++ b/ooxx/index.html
@@ -3,14 +3,14 @@
 <head>
     <title>ooxx</title>
     <link href="ooxx.css" type="text/css" rel="stylesheet" />
-    <script src="vue.js"></script>
+    <script src="vue.js" defer></script>
     <script src="ooxx.js" defer></script>
 </head>
-<body onload="init()">
+<body>
     <div id="app">
         <div id="hint">{{hint}}</div>
         <div id="playground">
-            <ooxx-tile v-for="n in 9" :key="n" :index="n"></ooxx-tile>
+            <ooxx-tile v-for="(data,index) in grid" :key="index" :index="index" :player="data"></ooxx-tile>
         </div>
         <button id="reload" onclick="window.location.reload()">RELOAD</button>
     </div>
