--- a/ooxx/index.html
+++ b/ooxx/index.html
@@ -10,7 +10,7 @@
     <div id="app">
         <div id="hint">{{hint}}</div>
         <div id="playground">
-            <ooxx-tile v-for="(data,index) in grid" :key="index" :index="index" :player="data"></ooxx-tile>
+            <ooxx-tile  v-for="(data,index) in grid" :win="win_tiles.has(index)" :key="index" :index="index" :player="data"></ooxx-tile>
         </div>
         <button id="reload" onclick="window.location.reload()">RELOAD</button>
     </div>
