--- a/8-puzzle/index.html
+++ b/8-puzzle/index.html
@@ -3,22 +3,16 @@
 <head>
     <title>8-puzzle</title>
     <link href="8-puzzle.css" type="text/css" rel="stylesheet" />
-    <script src="../controllers/4way.js"></script>
-    <script src="8-puzzle.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js" defer></script>
+    <script src="8-puzzle.js" defer></script>
 </head>
-<body onload="init()">
-    <div id="hint">8-puzzle</div>
-    <div id="playground">
-        <div class="grid"></div>
-        <div class="grid"></div>
-        <div class="grid"></div>
-        <div class="grid"></div>
-        <div class="grid"></div>
-        <div class="grid"></div>
-        <div class="grid"></div>
-        <div class="grid"></div>
-        <div class="grid"></div>
+<body>
+    <div id="app">
+        <div id="hint">{{hint}}</div>
+        <div id="playground">
+            <puzzle-tile v-for="(n,index) in numbers" :key="index" :number="n" :match="index"></puzzle-tile>
+        </div>
+        <button id="reload" onclick="window.location.reload()">RELOAD</button>
     </div>
-    <button id="reload" onclick="window.location.reload()">RELOAD</button>
 </body>
 </html>
