--- a/8-puzzle/index.html
+++ b/8-puzzle/index.html
@@ -9,8 +9,8 @@
 <body>
     <div id="app">
         <div id="hint">{{hint}}</div>
-        <div id="playground">
-            <puzzle-tile v-for="(n,index) in numbers" :cursor="n==cursor" :key="index" :number="n" :match="index"></puzzle-tile>
+        <div id="playground" @keyup.up="move()" @keyup.down="move()" @keyup.left="move()" @keyup.right="move()">
+            <puzzle-tile v-for="(n,index) in numbers()" :cursor="index==cursorIndex" :key="index" :number="n" :match="index"></puzzle-tile>
         </div>
         <button id="reload" onclick="window.location.reload()">RELOAD</button>
     </div>
