--- a/8-puzzle/index.html
+++ b/8-puzzle/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="app">
         <div id="hint">{{hint}}</div>
-        <div id="playground" @keyup.up="move" @keyup.down="move(0,1)" @keyup.left="move(-1,0)" @keyup.right="move(1,0)" tabindex="0">
+        <div id="playground">
             <puzzle-tile v-for="(n,index) in numbers()" :cursor="index==cursorIndex" :key="index" :number="n" :match="index"></puzzle-tile>
         </div>
         <button id="reload" onclick="window.location.reload()">RELOAD</button>
