--- a/snake/index.html
+++ b/snake/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>🐍snake🐍</title>
+    <title>🐍Snake🐍</title>
     <link href="snake.css" type="text/css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js" defer></script>
     <script src="snake.js" defer></script>
