--- a/snake/index.html
+++ b/snake/index.html
@@ -4,6 +4,7 @@
     <title>🐍Snake🐍</title>
     <link href="snake.css" type="text/css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js" defer></script>
+    <script src="snake-config.js" defer></script>
     <script src="snake.js" defer></script>
 </head>
 <body>
@@ -15,6 +16,15 @@
             <grid-div class="food" v-for="(p,i) in foods" :key="'food'+i" :x="p[0]" :y="p[1]"></grid-div>
         </div>
         <button id="reload" onclick="window.location.reload()">RELOAD</button>
+    </div>
+    <div id="config-app">
+        <button v-if="collapse" id="config-btn" @click="collapse = false">⚙️</button>
+        <section v-if="!collapse">
+            <label>size<input type="number" name="width" v-model.number="size"></label>
+            <label><input type="checkbox" name="movement" v-model="auto">automove</label>
+            <button @click="apply">✔️</button>
+            <button @click="cancel">❌</button>
+        </section>
     </div>
 </body>
 </html>
