draw active cell

--- a/game-of-life/index.html
+++ b/game-of-life/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section id="app">
-        <game-of-life></game-of-life>
+        <game-of-life v-bind="{width,height,scale}"></game-of-life>
     </section>
 </body>
 </html>
