--- a/game-of-life/index.html
+++ b/game-of-life/index.html
@@ -9,7 +9,18 @@
 </head>
 <body>
     <section id="app">
-        <game-of-life v-bind="{width,height,scale}"></game-of-life>
+        <game-of-life v-bind="{width,height}"></game-of-life>
+    </section>
+    <section id="options">
+        <label>
+            size
+            <input type="number" />
+        </label>
+        <label>
+            frameskip
+            <input type="number" />
+        </label>
+        <button @click="">apply</button>
     </section>
 </body>
 </html>
