--- a/game-of-life/index.html
+++ b/game-of-life/index.html
@@ -5,11 +5,12 @@
     <link href="game-of-life.css" type="text/css" rel="stylesheet" />
 
     <script src="vue.js" defer></script>
+    <script src="config.js" defer></script>
     <script src="game-of-life.js" defer></script>
 </head>
 <body>
     <section id="app">
-        <game-of-life v-bind="{width,height}"></game-of-life>
+        <game-of-life v-bind="{size,frameskip,fps}"></game-of-life>
     </section>
     <section id="options">
         <label for="size">size</label>
@@ -18,7 +19,8 @@
         <input type="number" name="frameskip" v-model="frameskip" />
         <label for="fps">fps</label>
         <input type="number" name="fps" v-model="fps" />
-        <button style="grid-column-start:1;grid-column-end:3">apply</button>
+        <button class="full-row" @click="apply">apply</button>
+        <button class="full-row" @click="applyDefault">default</button>
     </section>
 </body>
 </html>
