apply config to game

--- a/game-of-life/index.html
+++ b/game-of-life/index.html
@@ -14,11 +14,11 @@
     </section>
     <section id="options">
         <label for="size">size</label>
-        <input type="number" name="size" v-model="size" />
+        <input type="number" name="size" v-model.number="size" />
         <label for="frameskip">frameskip</label>
-        <input type="number" name="frameskip" v-model="frameskip" />
+        <input type="number" name="frameskip" v-model.number="frameskip" />
         <label for="fps">fps</label>
-        <input type="number" name="fps" v-model="fps" />
+        <input type="number" name="fps" v-model.number="fps" />
         <button class="full-row" @click="apply">apply</button>
         <button class="full-row" @click="applyDefault">default</button>
     </section>
