--- a/tetris/index.html
+++ b/tetris/index.html
@@ -7,10 +7,9 @@
     <link href="tetris.css" type="text/css" rel="stylesheet" />
 
     <script src="utility.js" defer></script>
-    <script src="css.js" defer></script>
     <script src="tetris.js" defer></script>
 </head>
 <body>
-    <div id="playground" :style="[borderStyle,staticStyle]"></div>
+    <div id="playground" :style="staticStyle"></div>
 </body>
 </html>
